--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
 Werkzeug==3.1.3
+numpy==1.24.3
+scipy==1.11.1
+python-multipart==0.0.6
