--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,7 @@ scipy==1.11.1
 python-multipart==0.0.6
 streamlit==1.32.0
 requests==2.32.4
+pandas==2.0.3
+plotly==5.17.0
+schedule==1.2.0
+aiohttp==3.9.1
