feat: AI 기반 이커머스 A/B 테스트 자동화 플랫폼 구현 완료
- 데이터베이스 스키마 설계 (ABTest, Variant, PerformanceLog, TestResult)
- A/B 테스트 API 엔드포인트 구현
- 승자 결정 로직 (가중치 기반 점수 + 통계적 유의성)
- 자동화 스케줄러 (매일 자정 실행)
- 가드레일 검사 및 안전 지표
- 자동화 파이프라인 (승자 결정 → 다음 라운드 시작)
- 테스트 스크립트 및 분석 도구
- .gitignore 업데이트 (DB 파일, venv 등 제외)

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,19 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# A/B Test Project specific
+abtest.db
+abtest.db-journal
+*.db
+*.db-journal
+alembic_temp/
+venv/
+__pycache__/
+*.pyc
+.env
+.env.local
+.env.production
+
 # Flask stuff:
 instance/
 .webassets-cache
