--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,15 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
 Werkzeug==3.1.3
+# A/B 테스트 관련 의존성 추가
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
+python-multipart==0.0.6
+python-dateutil==2.8.2
+pandas==2.1.4
+numpy==1.24.4
+scipy==1.11.4
+apscheduler==3.10.4
+httpx==0.25.2
+requests==2.31.0
